base: simple webserver with graphs

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,9 @@
     <h1>VernumDesk</h1>
     <div class="container">
         <div class="hero">
-          <h1>Real Time Sensor Display</h1>
+          <h1>Shooter Status</h1>
           <div class="chart-container">
-            <canvas id="myChart" width="1000" height="600"></canvas>
+            <canvas id="chart-shooter" width="1000" height="600"></canvas>
           </div>
         </div>
     </div>
